fixed a README typo in scripts/

--- a/scripts/README
+++ b/scripts/README
@@ -7,13 +7,12 @@ Some interesting results...
 
 The Big Lebowski has the most occurances of "dude"
 I though one of the movies with Keanu Reeves such
-as Bill & Teds Excellent Adventer or Point Break would
-have been close but they are not.
+as Bill & Teds Excellent Adventure or Point Break would
+have been close but they weren't.
 
 Aliens, Platoon and Full Metal Jacket had far fewer
 cuss words than expected.
 
-For a listing of moview with the most cuss words see:
+A funny link about movies and cuss words:
 http://en.wikipedia.org/wiki/List_of_films_that_most_frequently_use_the_word_%22fuck%22
-
 
